enabled requireUpperBoundDeps by default
(cherry picked from commit 7ec3d2d2bad30b67aa3bd5c8e476dd361d37c222)

--- a/langchain4j-open-ai-official/pom.xml
+++ b/langchain4j-open-ai-official/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>langchain4j-open-ai-official</artifactId>
     <name>LangChain4j :: Integration :: OpenAI Official</name>
 
+    <properties>
+        <enforcer.skipRules>requireUpperBoundDeps</enforcer.skipRules>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
