--- a/langchain4j-parent/pom.xml
+++ b/langchain4j-parent/pom.xml
@@ -731,7 +731,7 @@
                                 <requireMavenVersion>
                                     <version>3.8</version>
                                 </requireMavenVersion>
-                                <!-- TODO: Add requireUpperBoundDeps -->
+                                <requireUpperBoundDeps></requireUpperBoundDeps>
                             </rules>
                         </configuration>
                     </execution>
