--- a/web-search-engines/langchain4j-web-search-engine-google-custom/pom.xml
+++ b/web-search-engines/langchain4j-web-search-engine-google-custom/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- TODO: remove enforcer.skipRules -->
-        <enforcer.skipRules>dependencyConvergence</enforcer.skipRules>
+        <enforcer.skipRules>dependencyConvergence,requireUpperBoundDeps</enforcer.skipRules>
     </properties>
 
     <dependencies>
