Azure OpenAI: added developer info
(cherry picked from commit 4d5ad4459f6462b71602f4e78211b4365fa7fbfa)

--- a/langchain4j-azure-open-ai/pom.xml
+++ b/langchain4j-azure-open-ai/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>langchain4j-azure-open-ai</artifactId>
     <name>LangChain4j :: Integration :: Azure OpenAI</name>
 
+    <developers>
+        <developer>
+            <id>jdubois</id>
+            <name>Julien Dubois</name>
+            <email>github@julien-dubois.com</email>
+            <url>https://www.julien-dubois.com</url>
+        </developer>
+    </developers>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
